src/objects/Packages__c.object
<CustomObject>
    <fields>
        <fullName>BIMHealthyStartEmail__c</fullName>
        <description>This field is set via workflow based on the project owners Geo. This field is used to notify the BIM healthy start team.</description>
        <inlineHelpText>This field is set via workflow based on the project owners Geo. This field is used to notify the BIM healthy start team.</inlineHelpText>
        <label>BIM Healthy Start Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CancelledReason__c</fullName>
        <description>This field is required when the status is marked as cancelled</description>
        <inlineHelpText>This field is required when the status is marked as cancelled</inlineHelpText>
        <label>Cancelled Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ChangeManagerIsChanged__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Change Manager Is Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChangeManagerIsNew__c</fullName>
        <defaultValue>true</defaultValue>
        <label>ChangeManagerIsNew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PackageTitle__c</fullName>
        <label>Package Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectLink__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))&amp;Scope__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectNameFormula__c</fullName>
        <formula>Scope__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectNumber__c</fullName>
        <formula>Scope__r.ProjectNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectOwner__c</fullName>
        <formula>Scope__r.Owner:User.FirstName&amp;&quot; &quot;&amp;Scope__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SafetyInDesign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Safety in Design</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Safety_In_Design_Description__c</fullName>
        <label>Safety In Design Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ScopeOwnerName__c</fullName>
        <formula>Scope_Owner__r.Contact__r.FirstName&amp;&quot; &quot;&amp;Scope_Owner__r.Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scope Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scope_Approach__c</fullName>
        <inlineHelpText>Outline here what method you will adopt to fulfill the scope of work outlined above. Consider if there are any inter-dependencies or sequencing requirements between tasks.</inlineHelpText>
        <label>Scope Approach</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Scope_Details__c</fullName>
        <inlineHelpText>Describe here the tasks to be completed and deliverables produced to fulfil the project objectives and contractual obligations.</inlineHelpText>
        <label>Scope Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Scope_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scope Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ProjectTeamMember__c.Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.Scope__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ProjectTeamMember__c</referenceTo>
        <relationshipLabel>Packages</relationshipLabel>
        <relationshipName>Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scope</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Scope and Packages</relationshipLabel>
        <relationshipName>Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Determines the type of package associated with the project.</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Project</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Package</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Utilize_BMI_Technology__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Projects that answer yes will need to provide additional data to determine if a BIM Health Start Review is required. Complete the BIM intake form for review by your Geography Director.</inlineHelpText>
        <label>Will this project utilize BIM technology</label>
        <type>Checkbox</type>
    </fields>
    <label>Package</label>
    <nameField>
        <label>Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>EcoScopeCancelledReasonRequired</fullName>
        <active>true</active>
        <description>A Scope cancelled reason is required when the scope is marked as cancelled</description>
        <errorConditionFormula>ISPICKVAL( Status__c , &quot;Cancelled&quot;) &amp;&amp;
ISPICKVAL(Scope__r.pse__Stage__c, &quot;Execution&quot;)&amp;&amp;
 (ISBLANK(CancelledReason__c) || ISNULL(CancelledReason__c))</errorConditionFormula>
        <errorMessage>A Scope cancelled reason is required when the scope is marked as cancelled</errorMessage>
    </validationRules>
</CustomObject>